cluster/media/autobrr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
spec:
  ports:
  - name: http
    port: 80
    targetPort: 7474
  selector:
    app: autobrr
