cluster/media/autobrr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobrr
spec:
  rules:
    - host: autobrr.sko.ai
      http:
        paths:
          - backend:
              service:
                name: autobrr
                port: 
                  number: 80
            path: /
            pathType: Prefix
